environment.Environment.scala.error
Erreur de compilation :
Environment:1: error: not found: value avanc
avanc 
^